src/main/default/objects/cfp_DataGroups__c/cfp_DataGroups__c.object-meta.xml
<CustomObject>
    <label>DataGroups</label>
    <nameField>
        <label>dk_DataGroups Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataGroups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>