src/main/default/objects/cfp_DataGroups__c/fields/cfp_Attributes__c.field-meta.xml
<CustomField>
    <fullName>cfp_Attributes__c</fullName>
    <label>Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>