src/main/default/objects/cfp_DataGroups__c/fields/cfp_Comments__c.field-meta.xml
<CustomField>
    <fullName>cfp_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>