src/main/default/objects/cfp_DataGroups__c/fields/cfp_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>cfp_Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>