src/main/default/objects/cfp_DataGroups__c/fields/cfp_System_Context__c.field-meta.xml
<CustomField>
    <fullName>cfp_System_Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System Context</label>
    <referenceTo>cfp_System_Context__c</referenceTo>
    <relationshipLabel>DataGroups</relationshipLabel>
    <relationshipName>dk_DataGroups</relationshipName>
    <type>Lookup</type>
</CustomField>