src/main/default/objects/cfp_DataGroups__c/recordTypes/cfp_DataGroup.recordType-meta.xml
<RecordType>
    <fullName>cfp_DataGroup</fullName>
    <active>true</active>
    <label>DataGroup</label>
</RecordType>